# finance-docs-etl

./: .gitignore  README.md  pyproject.toml
data/: extracted_data.json  transform_data.csv
src/: clean_columns.py  extract.py  extract_data.py  extract_metadata.py  load_data.py  scrape_bca.py  transform.py
