[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "camelot-py[base]>=1.0.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.24.0",
]
